# dclass

./: .gitignore  .gitmodules  COMPILE  Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.h.in  configure  configure.ac  debianize.sh  git2deblogs.pl  progress.txt  tags.sh
debian/: changelog  control  copyright  gbp.conf  libdclass0-dev.install  libdclass0-jni.install  libdclass0-jni.links  libdclass0-jni.shlibs  libdclass0.install  libdclass0.links  libdclass0.shlibs  rules  symbols
java-wikimedia/: dclass-wrapper.c  dclass-wrapper.h
jni/: Makefile.am  configure.ac  dclass-wrapper.c
perl/UA-dClass/: Changes  MANIFEST  Makefile.PL  README  dClass.xs  test.sh
perl/UA-dClass/fallback/: const-c.inc  const-xs.inc
perl/UA-dClass/lib/UA/: dClass.pm
perl/UA-dClass/t/: 00-load.t  01-basic.t  UA-dClass.t
src/: Makefile  Makefile.am  configure.ac  debianize.sh  git2deblogs.pl
src/debian/: changelog  control
