lib_LTLIBRARIES = libdclass.la

libdclass_la_SOURCES = src/dtree_core.c     \
		       src/openddr_client.c \
		       src/dclass_file.c    \
                       src/dtree_mem.c      \
                       src/dtree_util.c     \
                       src/dclass_client.c

libdclass_la_LDFLAGS = -shared
